# androidctl

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml
androidctl/: Taskfile.yml  pyproject.toml
androidctl/src/androidctl/: __init__.py  app.py  cli_options.py  command_payloads.py  command_views.py  exit_codes.py  output.py
androidctl/src/androidctl/commands/: actions.py  adb_wireless.py  close.py  connect.py  execute.py  list_apps.py  observe.py  open.py  plumbing.py  run_pipeline.py  screenshot.py  setup.py  wait.py
androidctl/src/androidctl/daemon/: __init__.py  client.py  discovery.py  launcher.py  owner.py
androidctl/src/androidctl/errors/: __init__.py  mapping.py  models.py
androidctl/src/androidctl/parsing/: __init__.py  duration.py  open_target.py  refs.py  screen_id.py  wait.py
androidctl/src/androidctl/renderers/: __init__.py  _paths.py  xml.py  xml_projection.py
androidctl/src/androidctl/resources/: __init__.py
androidctl/src/androidctl/setup/: __init__.py  accessibility.py  adb.py  apk_resource.py  pairing.py  verify.py
androidctl/src/androidctl/user_state/: __init__.py  config.py  paths.py
androidctl/src/androidctl/workspace/: __init__.py  resolve.py
androidctl/tests/: __init__.py  conftest.py
androidctl/tests/e2e/: conftest.py  support.py  test_daemon_startup.py  test_installed_versions.py  test_process_contract.py
androidctl/tests/integration/: test_happy_path_commands.py  test_public_contract_loop.py  test_secondary_commands.py
androidctl/tests/support/: __init__.py  daemon_fakes.py  semantic_contract.py
androidctl/tests/unit/: test_adb_wireless_command.py  test_cli_smoke.py  test_command_payloads.py  test_command_plumbing.py  test_command_views.py  test_daemon_client.py  test_daemon_discovery.py  test_errors.py  test_execute_errors.py  test_open_target.py  test_output.py  test_owner.py  test_renderer_paths.py  test_renderers.py  test_run_pipeline.py  test_screen_id_parsing.py  test_setup_accessibility.py  test_setup_adb.py  test_setup_android_contract.py  test_setup_apk_resource.py  test_setup_command.py  test_setup_pairing.py  test_setup_verify.py  test_user_state_config.py  test_user_state_paths.py  test_version.py  test_wait_parsing.py  test_workspace_resolver.py
androidctld/: Taskfile.yml  pyproject.toml
androidctld/src/androidctld/: __init__.py  __main__.py  app_targets.py  config.py  observation.py  protocol.py  runtime_policy.py  text_equivalence.py
androidctld/src/androidctld/actions/: __init__.py  action_target.py  capabilities.py  executor.py  focus_confirmation.py  focused_input_admissibility.py  fresh_current.py  postconditions.py  repair.py  request_builder.py  settle.py  submit_confirmation.py  submit_routing.py  type_confirmation.py
androidctld/src/androidctld/artifacts/: __init__.py  models.py  screen_lookup.py  screen_payloads.py  writer.py
androidctld/src/androidctld/auth/: __init__.py  active_registry.py  secret_files.py  token_store.py
androidctld/src/androidctld/commands/: __init__.py  assembly.py  command_models.py  dispatch.py  executor.py  from_boundary.py  models.py  open_targets.py  orchestration.py  registry.py  result_builders.py  result_models.py  results.py  semantic_command_names.py  semantic_error_mapping.py  semantic_truth.py  service.py
androidctld/src/androidctld/daemon/: __init__.py  active_slot.py  envelope.py  http_host.py  ingress.py  ownership_probe.py  server.py  service.py
androidctld/src/androidctld/device/: __init__.py  action_models.py  action_serialization.py  adapters.py  bootstrap.py  connectors.py  errors.py  interfaces.py  parsing.py  rpc.py  schema.py  types.py
androidctld/src/androidctld/errors/: __init__.py
androidctld/src/androidctld/logging/: __init__.py
androidctld/src/androidctld/refs/: __init__.py  models.py  repair.py  service.py
androidctld/src/androidctld/rendering/: __init__.py  screen_xml.py
androidctld/src/androidctld/runtime/: __init__.py  kernel.py  lifecycle.py  models.py  screen_state.py  state_repo.py  store.py
androidctld/src/androidctld/schema/: __init__.py  base.py  core.py  daemon_api.py  persistence.py  (+2 more)
androidctld/tests/: __init__.py
androidctld/tests/golden/: __init__.py
androidctld/tests/integration/: __init__.py  test_device_bootstrap.py  test_semantic_loop.py
androidctld/tests/support/: __init__.py  runtime_store.py
androidctld/tests/unit/: __init__.py  test_action_orchestration.py  test_action_target.py  test_app_target_matching.py  test_artifact_publication.py  test_authoritative_current_basis.py  test_command_executor.py  test_command_models.py  test_command_orchestration.py  test_command_registry.py  test_connect_lifecycle.py  test_daemon_http_client_disconnect.py  test_daemon_http_malformed_boundary.py  test_device_rpc_conformance.py  test_device_rpc_parsing.py  test_focus_contract.py  test_focused_input_admissibility.py  test_from_boundary.py  test_list_apps_command.py  test_observation.py  test_open_defaults.py  test_ref_repair.py  test_retained_failure_projection.py  test_runtime_api.py  test_runtime_kernel.py  test_runtime_normalization.py  test_runtime_public_shapes.py  test_runtime_store.py  test_schema_base_models.py  test_screen_artifact_lookup.py  test_screen_refresh_service.py  test_screen_xml_artifact.py  test_semantic_command_parsing.py  test_semantic_continuity.py  test_semantic_error_mapping.py  test_semantic_screen_support.py  test_semantic_truth.py  test_semantic_wait.py  test_serial_runtime.py  test_snapshot_models.py  (+10 more)
contracts/: Taskfile.yml  pyproject.toml
contracts/src/androidctl_contracts/: __init__.py  _wire_helpers.py  base.py  command_catalog.py  command_results.py  daemon_api.py  errors.py  paths.py  public_screen.py  user_state.py  vocabulary.py
contracts/tests/fixtures/: android_rpc_raw_boundary_tokens.json
contracts/tests/unit/: public_screen_payloads.py  test_android_rpc_raw_boundary_tokens.py  test_base.py  test_command_results.py  test_daemon_api.py  test_paths.py  test_public_screen.py  test_semantic_contract.py  test_user_state.py  test_version.py
(+329 files in other folders)
