[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androidctl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<0.29",
    "androidctl-contracts==0.1.0",
    "androidctld==0.1.0",
    "pydantic>=2.11,<3",
    "typing-extensions>=4.12,<5",
    "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy<1.11",
    "pytest>=8,<9",
    "ruff",
    "tomli",
]

[project.scripts]
androidctl = "androidctl.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"androidctl.resources" = ["*.apk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/integration"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "C4", "RUF009", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["androidctl"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/../contracts/src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
