[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androidctld"
version = "0.1.0"
description = "AndroidCtl host daemon"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-core>=2.33,<3",
    "typing-extensions>=4.12,<5",
    "androidctl-contracts==0.1.0",
]

[project.scripts]
androidctld = "androidctld.__main__:main"

[project.optional-dependencies]
dev = [
    "black",
    "mypy<1.11",
    "pytest",
    "ruff",
    "tomli",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../contracts/src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "C4", "RUF009", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["androidctld", "androidctl_contracts"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/../contracts/src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
