[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androidctl-contracts"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-core>=2.33,<3",
    "typing-extensions>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy<1.11",
    "pytest",
    "ruff",
    "tomli",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "C4", "RUF009", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["androidctl_contracts"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
